--- a/config/bloodmagic/rituals.cfg
+++ b/config/bloodmagic/rituals.cfg
@@ -116,6 +116,9 @@ rituals {
     B:ritualSteadfastHeart=true
     B:ritualUnmaking=true
 
+    # Enable the soothing_hearth ritual. [default: true]
+    B:soothing_hearth=true
+
     # Enable the speed ritual. [default: true]
     B:speed=true
 
