--- a/config/dmgcontrol.cfg
+++ b/config/dmgcontrol.cfg
@@ -10,8 +10,6 @@ damage_source_modifiers {
 
     # The modifier for all damage from the anvil source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_anvil=1.0
-
-    # The modifier for all damage from the arrow source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_arrow=1.0
     S:DamageModifier_basalz=1.0
     S:DamageModifier_bee.hive=1.0
@@ -35,6 +33,7 @@ damage_source_modifiers {
     # The modifier for all damage from the drown source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_drown=1.0
     S:DamageModifier_electric=1.0
+    S:DamageModifier_electricity=1.0
     S:DamageModifier_ember=1.0
     S:DamageModifier_explosion=1.0
     S:DamageModifier_explosion.player=1.0
@@ -79,8 +78,6 @@ damage_source_modifiers {
 
     # The modifier for all damage from the magic source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_magic=1.0
-
-    # The modifier for all damage from the mob source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_mob=1.0
     S:DamageModifier_monoxide=1.0
     S:DamageModifier_mudPoisoning=1.0
@@ -91,6 +88,8 @@ damage_source_modifiers {
 
     # The modifier for all damage from the outOfWorld source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_outOfWorld=1.0
+
+    # The modifier for all damage from the oxygen_suffocation source. [range: 0.0 ~ 1024.0, default: 1.0]
     S:DamageModifier_oxygen_suffocation=1.0
     S:DamageModifier_pc=1.0
     S:DamageModifier_phaser=1.0
@@ -265,23 +264,26 @@ max_health {
     S:"MaxHealth_ancientspellcraft:void_creeper"=20.0
     S:"MaxHealth_ancientspellcraft:wolf_minion"=8.0
     S:"MaxHealth_apocalypse_craft:airdrop"=40.0
-
-    # The maximum health value for apocalypse_craft:airdropplane. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 1000.0]
     S:"MaxHealth_apocalypse_craft:airdropplane"=1000.0
 
     # The maximum health value for apocalypse_craft:bosszombie. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 250.0]
     S:"MaxHealth_apocalypse_craft:bosszombie"=250.0
     S:"MaxHealth_apocalypse_craft:co2turretentity"=15.0
+
+    # The maximum health value for apocalypse_craft:energyshield. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 9001.0]
+    S:"MaxHealth_apocalypse_craft:energyshield"=9001.0
     S:"MaxHealth_apocalypse_craft:explosion"=1000.0
+
+    # The maximum health value for apocalypse_craft:flareongroundentity. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 9999.0]
     S:"MaxHealth_apocalypse_craft:flareongroundentity"=9999.0
 
     # The maximum health value for apocalypse_craft:marine. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 50.0]
     S:"MaxHealth_apocalypse_craft:marine"=50.0
     S:"MaxHealth_apocalypse_craft:marineentity"=10.0
-
-    # The maximum health value for apocalypse_craft:mountedgunturret. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 1.4E-45]
     S:"MaxHealth_apocalypse_craft:mountedgunturret"=1.4E-45
     S:"MaxHealth_apocalypse_craft:scrapautomobile"=20.0
+
+    # The maximum health value for apocalypse_craft:scrapbike. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 30.0]
     S:"MaxHealth_apocalypse_craft:scrapbike"=30.0
     S:"MaxHealth_apocalypse_craft:trader"=9999.0
 
@@ -505,7 +507,7 @@ max_health {
     S:"MaxHealth_historicizedmedicine:plaguedoctor"=20.0
     S:"MaxHealth_historicizedmedicine:rat"=8.0
 
-    # The maximum health value for horse_colors:horse_felinoid. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 25.0]
+    # The maximum health value for horse_colors:horse_felinoid. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 16.0]
     S:"MaxHealth_horse_colors:horse_felinoid"=21.0
     S:"MaxHealth_industrialforegoing:pink_slime"=20.0
     S:"MaxHealth_isorropia:chromatic_sheep"=8.0
@@ -557,7 +559,7 @@ max_health {
     # The maximum health value for minecraft:creeper. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 20.0]
     S:"MaxHealth_minecraft:creeper"=20.0
 
-    # The maximum health value for minecraft:donkey. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 16.0]
+    # The maximum health value for minecraft:donkey. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 26.0]
     S:"MaxHealth_minecraft:donkey"=24.0
 
     # The maximum health value for minecraft:elder_guardian. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 80.0]
@@ -585,7 +587,7 @@ max_health {
     # The maximum health value for minecraft:husk. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 20.0]
     S:"MaxHealth_minecraft:husk"=20.0
 
-    # The maximum health value for minecraft:llama. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 25.0]
+    # The maximum health value for minecraft:llama. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 26.0]
     S:"MaxHealth_minecraft:llama"=19.0
 
     # The maximum health value for minecraft:magma_cube. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 20.0]
@@ -818,15 +820,11 @@ max_health {
     S:"MaxHealth_randomthings:spirit"=1.0
     S:"MaxHealth_serendustry:friendly_creeper"=100.0
     S:"MaxHealth_srparasites:ada_arachnida"=80.0
-
-    # The maximum health value for srparasites:ada_devourer. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 80.0]
     S:"MaxHealth_srparasites:ada_devourer"=80.0
     S:"MaxHealth_srparasites:ada_hammerhead"=80.0
     S:"MaxHealth_srparasites:ada_longarms"=95.0
     S:"MaxHealth_srparasites:ada_manducater"=45.0
     S:"MaxHealth_srparasites:ada_summoner"=100.0
-
-    # The maximum health value for srparasites:ada_vermin. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 80.0]
     S:"MaxHealth_srparasites:ada_vermin"=80.0
     S:"MaxHealth_srparasites:ada_yelloweye"=55.0
     S:"MaxHealth_srparasites:beckon_si"=25.0
@@ -843,12 +841,8 @@ max_health {
     S:"MaxHealth_srparasites:fer_human"=24.0
     S:"MaxHealth_srparasites:fer_pig"=16.0
     S:"MaxHealth_srparasites:fer_villager"=27.0
-
-    # The maximum health value for srparasites:gnat. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 5.0]
     S:"MaxHealth_srparasites:gnat"=5.0
     S:"MaxHealth_srparasites:hi_guardian"=30.0
-
-    # The maximum health value for srparasites:hijacked_skeleton_stray. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 25.0]
     S:"MaxHealth_srparasites:hijacked_skeleton_stray"=25.0
     S:"MaxHealth_srparasites:host"=50.0
     S:"MaxHealth_srparasites:incompleteform_medium"=14.0
@@ -947,8 +941,6 @@ max_health {
 
     # The maximum health value for techguns:supermutantheavy. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 45.0]
     S:"MaxHealth_techguns:supermutantheavy"=45.0
-
-    # The maximum health value for techguns:tgdummyspawn. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 20.0]
     S:"MaxHealth_techguns:tgdummyspawn"=20.0
 
     # The maximum health value for techguns:zombiefarmer. Negative values deactivate health modification for this entity. [range: -1.0 ~ 65536.0, default: 18.0]
