--- a/config/endermodpacktweaks/modpack.cfg
+++ b/config/endermodpacktweaks/modpack.cfg
@@ -26,10 +26,10 @@ crash_info {
 
 customization {
     # Customize the window of the game.
-    B:"[01] Enable Window Customization"=false
+    B:"[01] Enable Window Customization"=true
 
     # Set the window title to the modpack name
-    B:"[02] Change window title"=false
+    B:"[02] Change window title"=true
 
     # Customize how the window title is displayed
     # Format: <lang_key>;<your_title>
@@ -41,10 +41,10 @@ customization {
      >
 
     # Replace the default icon with a custom one.
-    B:"[04] Replace window icon"=false
+    B:"[04] Replace window icon"=true
 
     # Override the path to the icon.
-    S:"[05] Window icon path"=config/endermodpacktweaks/icon.png
+    S:"[05] Window icon path"=config/endermodpacktweaks/icon/icon.png
 }
 
 
@@ -74,16 +74,16 @@ default_server {
 
 modpack {
     # The name of the modpack.
-    S:"[01] Modpack Name"=
+    S:"[01] Modpack Name"=GT Quantum
 
     # The version of the modpack.
-    S:"[02] Modpack Version"=
+    S:"[02] Modpack Version"=1.0.9
 
     # The author of the modpack.
-    S:"[03] Modpack Author"=
+    S:"[03] Modpack Author"=Quantum Studios
 
     # A URL for the pack download.
-    S:"[04] Modpack URL"=
+    S:"[04] Modpack URL"=https://www.curseforge.com/minecraft/modpacks/gregtech-quantum
 }
 
 
@@ -113,15 +113,15 @@ options_menu_buttons {
     }
 
     github_button {
-        B:"[01] Enable Button"=false
+        B:"[01] Enable Button"=true
         S:"[02] Button Text"=GitHub
-        S:"[03] Button URL"=
+        S:"[03] Button URL"=https://github.com/iristhepianist/GTQRepo
     }
 
     discord_button {
-        B:"[01] Enable Button"=false
+        B:"[01] Enable Button"=true
         S:"[02] Button Text"=Discord
-        S:"[03] Button URL"=
+        S:"[03] Button URL"=https://discord.gg/S74nDHNVXR
     }
 
     twitch_button {
