--- a/config/gendustry/client.config
+++ b/config/gendustry/client.config
@@ -10,7 +10,7 @@ nei {
     B:"Add Extractor Recipes"=true
     B:"Add Imprinter Recipes"=true
     B:"Add Liquifier Recipes"=true
-    B:"Add Mutagen Producer Recipes"=true
+    B:"Add Mutagen Producer Recipes"=false
     B:"Add Mutatron Recipes"=true
     B:"Add Replicator Recipes"=true
     B:"Add Sampler Recipes"=true
