--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -22,6 +22,7 @@ advanced {
         notreepunching:saw/bronze
         hbm:ore_bedrock_seared
         libvulpes:productnugget
+        engineersdecor:small_solar_panel
         mysticalworld:copper_dust
         hbm:powder_titanium
         galaxyspace:proxima_b_blocks:9
@@ -83,6 +84,7 @@ advanced {
         hbm:ore_bedrock_purified
         thermalfoundation:material:0
         thermalfoundation:material:1
+        engineersdecor:straight_pipe_valve_redstone
         enderio:block_simple_stirling_generator
         railcraft:coke_block
         railcraft:blast_furnace
@@ -154,6 +156,7 @@ advanced {
         advancedrocketry:cuttingmachine
         embers:axe_copper
         thermalfoundation:material:200
+        engineersdecor:straight_pipe_valve_redstone_analog
         galacticraftcore:basic_item:9
         galacticraftcore:basic_item:8
         galacticraftcore:basic_item:7
@@ -387,6 +390,7 @@ advanced {
         libvulpes:metal0
         hbm:powder_schrabidium
         hbm:ore_meteor_thorium
+        engineersdecor:passive_fluid_accumulator
         notreepunching:fire_starter
         hbm:powder_lanthanium
         hbm:plate_steel
@@ -463,6 +467,7 @@ advanced {
         enderio:item_alloy_ingot:6
         enderio:item_alloy_ingot:3
         morebees:dustplatinum
+        engineersdecor:small_waste_incinerator
         enderio:item_alloy_ingot:4
         enderio:item_alloy_ingot:1
         enderio:item_alloy_ingot:2
@@ -594,6 +599,7 @@ advanced {
         thermalfoundation:material:136
         notreepunching:clay_brick
         thermalfoundation:material:135
+        engineersdecor:straight_pipe_valve
         fluid:biocrude
         hbm:ore_bedrock_centrifuged
         hbm:powder_steel
@@ -661,6 +667,7 @@ advanced {
         hbm:chemistry_template:750
         hbm:ore_bedrock
         hbm:powder_polonium
+        hbm:bolt:33
         lucraftcore:ore_uranium
         embers:hoe_copper
         qmd:dust:6
