--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,19 +2,69 @@
 
 ~CONFIG_VERSION: 0.1.0
 
-world-1917283651 {
+world-1917283496 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=PIG IRON
+    S:filterText=
 
     # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
+world-1917283527 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=YAG
+    B:overlayEnabled=true
+}
+
+
+world-1917283558 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=thaumo
+    B:overlayEnabled=true
+}
+
+
+world-1917283589 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-1917283620 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=battery
+    B:overlayEnabled=true
+}
+
+
+world-1917283651 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=batter
     B:overlayEnabled=true
 }
 
