--- a/config/discordrp.cfg
+++ b/config/discordrp.cfg
@@ -4,7 +4,7 @@ general {
     # A custom application id to support your own modpack
     S:applicationId=
     S:customDimensions <
-        default|In A Dimension
+        default|Foraging through the Wasteland
      >
 
     # Whether to show your elapsed time on Discord
@@ -21,7 +21,7 @@ general {
         S:name=GT Quantum
 
         # The modpack id (used for the Rich Presence Asset. For example 123456 will be referred to asset 'pack_123456')
-        S:projectId=
+        S:projectId=pack_1052317
     }
 
 }
