--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -1958,7 +1958,7 @@ machine {
 
 misc {
     # Give new players a copy of the NC guidebook after logging in?
-    B:give_guidebook=false
+    B:give_guidebook=true
 
     # Combine all creative tabs into a single large one?
     B:single_creative_tab=false
@@ -2233,7 +2233,7 @@ quantum {
 
 radiation {
     # Will nuclear radiation exist in the world? Note that the game will require a restart for radiation-related items to be shown in JEI after enabling this feature.
-    B:radiation_enabled=false
+    B:radiation_enabled=true
 
     # List of UUIDs for players who will be given permanent radiation immunity.
     S:radiation_immune_players <
@@ -2940,6 +2940,13 @@ turbine {
 world_gen {
     # List of IDs of dimensions to whitelist/blacklist for ore generation.
     I:ore_dims <
+        0
+        2
+        -6
+        -100
+        4598
+        -9999
+        -11325
      >
 
     # Is the dimension list a whitelist (false) or a blacklist (true)?
@@ -3017,7 +3024,7 @@ world_gen {
      >
 
     # Remove disabled ores from the Ore Dictionary and JEI?
-    B:ore_hide_disabled=true
+    B:ore_hide_disabled=false
 
     # Pickaxe harvest levels of ores. Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
     I:ore_harvest_levels <
@@ -3035,7 +3042,7 @@ world_gen {
     B:wasteland_biome=true
 
     # The weight assigned to the generation of the wasteland biomes - higher numbers correspond to higher generation rates.
-    I:wasteland_biome_weight=100
+    I:wasteland_biome_weight=5
 
     # Will the wasteland dimension be generated?
     B:wasteland_dimension_gen=true
