--- a/config/ZombieAwareness/MobLists.cfg
+++ b/config/ZombieAwareness/MobLists.cfg
@@ -196,6 +196,7 @@ tickable_entities {
     B:entity_hunter_chopper=false
     B:entity_husk_slave=true
     B:entity_mask_man=false
+    B:entity_mob_flesh_creeper=false
     B:entity_ntm_fbi=false
     B:entity_ntm_radiation_blaze=false
     B:entity_ntm_ufo=false
