--- a/config/hbm/hbm_dimensions.cfg
+++ b/config/hbm/hbm_dimensions.cfg
@@ -73,157 +73,157 @@
 
     # Amount of uranium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.01_uraniumSpawnrate <
-        0:7
-        -6:7
+        0:0
+        -6:0
      >
 
     # Amount of titanium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.02_titaniumSpawnrate <
-        0:8
-        -6:8
+        0:0
+        -6:0
      >
 
     # Amount of sulfur ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.03_sulfurSpawnrate <
-        0:5
-        -6:5
+        0:0
+        -6:0
      >
 
     # Amount of aluminium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.04_aluminiumSpawnrate <
-        0:7
-        -6:7
+        0:0
+        -6:0
      >
 
     # Amount of copper ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.05_copperSpawnrate <
-        0:12
-        -6:12
+        0:0
+        -6:0
      >
 
     # Amount of fluorite ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.06_fluoriteSpawnrate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Amount of niter ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.07_niterSpawnrate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Amount of tungsten ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.08_tungstenSpawnrate <
-        0:10
-        -6:10
+        0:0
+        -6:0
      >
 
     # Amount of lead ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.09_leadSpawnrate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Amount of beryllium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.10_berylliumSpawnrate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Amount of thorium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.11_thoriumSpawnrate <
-        0:7
-        -6:7
+        0:0
+        -6:0
      >
 
     # Amount of lignite ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.12_ligniteSpawnrate <
-        0:2
-        -6:2
+        0:0
+        -6:0
      >
 
     # Amount of asbestos ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.13_asbestosSpawnRate <
-        0:2
-        -6:2
+        0:0
+        -6:0
      >
 
     # Amount of schist lithium ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.14_lithiumSpawnRate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Amount of rare earth ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.15_rareEarthSpawnRate <
-        0:6
-        -6:6
+        0:0
+        -6:0
      >
 
     # Spawns an oily coal vein every nTH chunk - <dimID:amount> (Int:Int)
     S:01.16_oilCoalSpawnRate <
-        0:128
-        -6:128
+        0:0
+        -6:0
      >
 
     # Amount of oil shale veins per chunk - <dimID:amount> (Int:Int)
     S:01.17_gasShaleSpawnRate <
-        0:5
-        -6:5
+        0:0
+        -6:0
      >
 
     # Spawns an explosive gas bubble every nTH chunk - <dimID:amount> (Int:Int)
     S:01.18_explosiveBubbleSpawnRate <
         0:80
-        -6:80
+        -6:0
      >
 
     # Spawns a gas bubble every nTH chunk - <dimID:amount> (Int:Int)
     S:01.19_gasBubbleSpawnRate <
-        0:40
-        -6:40
+        0:0
+        -6:0
      >
 
     # Amount of cinnabar ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.20_cinnabarSpawnRate <
-        0:1
-        -6:1
+        0:0
+        -6:0
      >
 
     # Amount of cobalt ore veins per chunk - <dimID:amount> (Int:Int)
     S:01.21_cobaltSpawnRate <
-        0:2
-        -6:2
+        0:0
+        -6:0
      >
 
     # Amount of iron cluster veins per chunk - <dimID:amount> (Int:Int)
     S:01.22_ironClusterSpawn <
-        0:4
-        -6:4
+        0:0
+        -6:0
      >
 
     # Amount of titanium cluster veins per chunk - <dimID:amount> (Int:Int)
     S:01.23_titaniumClusterSpawn <
-        0:2
-        -6:2
+        0:0
+        -6:0
      >
 
     # Amount of aluminium cluster veins per chunk - <dimID:amount> (Int:Int)
     S:01.24_aluminiumClusterSpawn <
-        0:3
-        -6:3
+        0:0
+        -6:0
      >
 
     # Amount of copper cluster veins per chunk - <dimID:amount> (Int:Int)
     S:01.24_copperClusterSpawn <
-        0:3
-        -6:3
+        0:0
+        -6:0
      >
 
     # Amount of malachite veins per chunk - <dimID:amount> (Int:Int)
     S:01.24_malachiteSpawn <
-        0:1
+        0:0
      >
 
     # Amount of reiium ore veins per chunk - <dimID:amount> (Int:Int)
@@ -258,48 +258,48 @@
 
     # Spawn bedrock oil every nTH chunk - <dimID:amount> (Int:Int)
     S:01.31_bedrockOilSpawnRate <
-        0:200
+        0:0
         -6:200
      >
 
     # Amount of nether uranium per chunk - <dimID:amount> (Int:Int)
     S:02.N00_uraniumSpawnrate <
-        -1:8
+        -1:80
      >
 
     # Amount of nether tungsten per chunk - <dimID:amount> (Int:Int)
     S:02.N01_tungstenSpawnrate <
-        -1:10
+        -1:0
      >
 
     # Amount of nether sulfur per chunk - <dimID:amount> (Int:Int)
     S:02.N02_sulfurSpawnrate <
-        -1:26
+        -1:0
      >
 
     # Amount of nether phosphorus per chunk - <dimID:amount> (Int:Int)
     S:02.N03_phosphorusSpawnrate <
-        -1:24
+        -1:0
      >
 
     # Amount of nether coal per chunk - <dimID:amount> (Int:Int)
     S:02.N04_coalSpawnrate <
-        -1:24
+        -1:0
      >
 
     # Amount of nether plutonium per chunk, if enabled - <dimID:amount> (Int:Int)
     S:02.N05_plutoniumSpawnrate <
-        -1:8
+        -1:0
      >
 
     # Amount of nether cobalt per chunk - <dimID:amount> (Int:Int)
     S:02.N06_cobaltSpawnrate <
-        -1:2
+        -1:0
      >
 
     # Amount of end trixite per chunk - <dimID:amount> (Int:Int)
     S:03.E01_tixiteSpawnrate <
-        1:8
+        1:0
      >
 }
 
@@ -307,52 +307,52 @@
 03_dimension_structures {
     # Spawn radio station on every nTH chunk - <dimID:n> (Int:Int)
     S:03.01_radioSpawn <
-        0:1000
+        0:0
      >
 
     # Spawn antenna on every nTH chunk - <dimID:n> (Int:Int)
     S:03.02_antennaSpawn <
-        0:750
+        0:0
      >
 
     # Spawn power plant on every nTH chunk - <dimID:n> (Int:Int)
     S:03.03_atomSpawn <
-        0:500
+        0:0
      >
 
     # Spawn vertibird on every nTH chunk - <dimID:n> (Int:Int)
     S:03.04_vertibirdSpawn <
-        0:500
+        0:0
      >
 
     # Spawn library dungeon on every nTH chunk - <dimID:n> (Int:Int)
     S:03.05_dungeonSpawn <
-        0:64
+        0:0
      >
 
     # Spawn relay on every nTH chunk - <dimID:n> (Int:Int)
     S:03.06_relaySpawn <
-        0:500
+        0:0
      >
 
     # Spawn satellite dish on every nTH chunk - <dimID:n> (Int:Int)
     S:03.07_satelliteSpawn <
-        0:500
+        0:0
      >
 
     # Spawn bunker on every nTH chunk - <dimID:n> (Int:Int)
     S:03.08_bunkerSpawn <
-        0:1000
+        0:0
      >
 
     # Spawn missile silo on every nTH chunk - <dimID:n> (Int:Int)
     S:03.09_siloSpawn <
-        0:1000
+        0:0
      >
 
     # Spawn factory on every nTH chunk - <dimID:n> (Int:Int)
     S:03.10_factorySpawn <
-        0:1000
+        0:0
      >
 
     # Spawn dud on every nTH chunk - <dimID:n> (Int:Int)
@@ -362,22 +362,22 @@
 
     # Spawn spaceship on every nTH chunk - <dimID:n> (Int:Int)
     S:03.12_spaceshipSpawn <
-        0:1000
+        0:0
      >
 
     # Spawn waste tank on every nTH chunk - <dimID:n> (Int:Int)
     S:03.13_barrelSpawn <
-        0:5000
+        0:0
      >
 
     # Spawn corrupt broadcaster on every nTH chunk - <dimID:n> (Int:Int)
     S:03.14_broadcasterSpawn <
-        0:5000
+        0:0
      >
 
     # Spawn AP landmine on every nTH chunk - <dimID:n> (Int:Int)
     S:03.15_landmineSpawn <
-        0:64
+        0:256
      >
 
     # Spawn big radiation hotspot on every nTH chunk - <dimID:n> (Int:Int)
@@ -387,17 +387,17 @@
 
     # Spawn locked safe on every nTH chunk - <dimID:n> (Int:Int)
     S:03.18_vaultSpawn <
-        0:2500
+        0:0
      >
 
     # Spawn water geyser on every nTH chunk - <dimID:n> (Int:Int)
     S:03.19_geyserWaterSpawn <
-        0:3000
+        0:100
      >
 
     # Spawn poison geyser on every nTH chunk - <dimID:n> (Int:Int)
     S:03.20_geyserChlorineSpawn <
-        0:3000
+        0:1000
      >
 
     # Spawn vapor geyser on every nTH chunk - <dimID:n> (Int:Int)
@@ -415,27 +415,27 @@
 04_dimension_dungeons {
     # Spawn meteor dungeon on every nTH chunk - <dimID:n> (Int:Int)
     S:03.23_meteorStructureSpawn <
-        0:15000
+        0:0
      >
 
     # Spawn landing capsule on every nTH chunk - <dimID:n> (Int:Int)
     S:03.24_capsuleSpawn <
-        0:100
+        0:0
      >
 
     # Spawn artic code vault on every nTH chunk - <dimID:n> (Int:Int)
     S:03.25_arcticVaultSpawn <
-        0:500
+        0:0
      >
 
     # Spawn jungle dungeon on every nTH chunk - <dimID:n> (Int:Int)
     S:03.26_jungleDungeonSpawn <
-        0:2000
+        0:0
      >
 
     # Spawn pyramid on every nTH chunk - <dimID:n> (Int:Int)
     S:03.27_pyramidSpawn <
-        0:4000
+        0:0
      >
 }
 
@@ -443,27 +443,27 @@
 05_dimension_meteors {
     # The probability of a meteor spawning per tick (an average of once every nTH ticks) - <dimID:n> (Int:Int)
     S:05.01_meteorStrikeChance <
-        0:60000
-        -28:1000
-        -29:2600
-        -31:180000
-        -13:6000
-        -20:120000
-        -1500:600
-        -1501:5000
-        -1506:12000
-        -1505:24000
-        -1507:1200
-        -1508:96000
-        -1511:48000
-        -1510:36000
-        -1509:108000
-        -1504:240000
+        0:0
+        -28:0
+        -29:0
+        -31:0
+        -13:0
+        -20:0
+        -1500:0
+        -1501:0
+        -1506:0
+        -1505:0
+        -1507:0
+        -1508:0
+        -1511:0
+        -1510:0
+        -1509:0
+        -1504:0
      >
 
     # The probability of a meteor spawning during meteor shower per tick (an average of once every nTH ticks) - <dimID:n> (Int:Int)
     S:05.02_meteorShowerChance <
-        0:360000
+        0:0
         -28:6000
         -29:15600
         -31:1080000
@@ -483,7 +483,7 @@
 
     # Max duration of meteor shower in ticks - <dimID:n> (Int:Int)
     S:05.03_meteorShowerDuration <
-        0:6000
+        0:0
         -28:100
         -29:260
         -31:18000
@@ -616,7 +616,7 @@
     B:06.05_mobGear=true
 
     # If true then this mod will generarte loot for chests
-    B:06.06_modLoot=true
+    B:06.06_modLoot=false
 }
 
 
