--- a/config/tinkeredhegemony.cfg
+++ b/config/tinkeredhegemony.cfg
@@ -1553,6 +1553,18 @@ disableditems {
     B:"hbm:big_sword"=false
 
     #  [default: true]
+    B:"hbm:bismuth_boots"=true
+
+    #  [default: true]
+    B:"hbm:bismuth_helmet"=true
+
+    #  [default: true]
+    B:"hbm:bismuth_legs"=true
+
+    #  [default: true]
+    B:"hbm:bismuth_plate"=true
+
+    #  [default: true]
     B:"hbm:bj_boots"=true
 
     #  [default: true]
@@ -1614,6 +1626,18 @@ disableditems {
     B:"hbm:diamond_gavel"=false
 
     #  [default: true]
+    B:"hbm:dieselsuit_boots"=true
+
+    #  [default: true]
+    B:"hbm:dieselsuit_helmet"=true
+
+    #  [default: true]
+    B:"hbm:dieselsuit_legs"=true
+
+    #  [default: true]
+    B:"hbm:dieselsuit_plate"=true
+
+    #  [default: true]
     B:"hbm:dns_boots"=true
 
     #  [default: true]
@@ -1625,6 +1649,18 @@ disableditems {
     #  [default: true]
     B:"hbm:dns_plate"=true
     B:"hbm:elec_sword"=false
+
+    #  [default: true]
+    B:"hbm:envsuit_boots"=true
+
+    #  [default: true]
+    B:"hbm:envsuit_helmet"=true
+
+    #  [default: true]
+    B:"hbm:envsuit_legs"=true
+
+    #  [default: true]
+    B:"hbm:envsuit_plate"=true
 
     #  [default: true]
     B:"hbm:euphemium_boots"=true
@@ -1786,6 +1822,18 @@ disableditems {
     B:"hbm:reer_graar"=false
 
     #  [default: true]
+    B:"hbm:robes_boots"=true
+
+    #  [default: true]
+    B:"hbm:robes_helmet"=true
+
+    #  [default: true]
+    B:"hbm:robes_legs"=true
+
+    #  [default: true]
+    B:"hbm:robes_plate"=true
+
+    #  [default: true]
     B:"hbm:rpa_boots"=true
 
     #  [default: true]
@@ -1881,6 +1929,18 @@ disableditems {
     B:"hbm:t45_plate"=true
 
     #  [default: true]
+    B:"hbm:taurun_boots"=true
+
+    #  [default: true]
+    B:"hbm:taurun_helmet"=true
+
+    #  [default: true]
+    B:"hbm:taurun_legs"=true
+
+    #  [default: true]
+    B:"hbm:taurun_plate"=true
+
+    #  [default: true]
     B:"hbm:titanium_boots"=true
 
     #  [default: true]
@@ -1893,6 +1953,18 @@ disableditems {
     #  [default: true]
     B:"hbm:titanium_plate"=true
     B:"hbm:titanium_sword"=false
+
+    #  [default: true]
+    B:"hbm:trenchmaster_boots"=true
+
+    #  [default: true]
+    B:"hbm:trenchmaster_helmet"=true
+
+    #  [default: true]
+    B:"hbm:trenchmaster_legs"=true
+
+    #  [default: true]
+    B:"hbm:trenchmaster_plate"=true
     B:"hbm:ullapool_caber"=false
     B:"hbm:weapon_bat"=false
     B:"hbm:weapon_bat_nail"=false
@@ -1905,6 +1977,9 @@ disableditems {
     B:"hbm:wood_gavel"=false
     B:"hbm:wrench"=false
     B:"hbm:wrench_flipped"=false
+
+    #  [default: true]
+    B:"hbm:zirconium_legs"=true
     B:"heroesexpansion:black_panther_suit"=true
     B:"heroesexpansion:captain_america_boots"=true
     B:"heroesexpansion:captain_america_chest"=true
