--- a/config/gregtech/modules.cfg
+++ b/config/gregtech/modules.cfg
@@ -57,19 +57,12 @@ modules {
     # Module Dependencies: [ gregtech:integration ]
     # Mod Dependencies: [ theoneprobe ]
     B:"gregtech:top_integration"=true
-
-    # Core module of Supercritical
     B:"supercritical:supercritical_core"=true
-
-    # Supercritical JustEnoughItems Integration Module
-    # Module Dependencies: [ gregtech:integration ]
-    # Mod Dependencies: [ jei ]
     B:"supercritical:supercritical_jei_integration"=true
-
-    # Supercritical OpenComputers Integration Module
-    # Module Dependencies: [ gregtech:integration ]
-    # Mod Dependencies: [ opencomputers ]
     B:"supercritical:supercritical_oc_integration"=true
+
+    # Core module of SussyPatches. Not to be confused with SuSy Core.
+    B:"sussypatches:sus_core"=true
 
     # VisualOres GregTech Integration. Disabling this will disable all GT integration in VisualOres.
     # Module Dependencies: [ gregtech:core ]
