--- a/config/hbm/hbm.cfg
+++ b/config/hbm/hbm.cfg
@@ -80,7 +80,7 @@
 
     # Allows re-evaluating power networks on link remove instead of destroying and recreating
     B:1.27_enableReEval=true
-    B:1.28_enableChangelog=true
+    B:1.28_enableChangelog=false
     B:1.28_enableDuckButton=true
     B:1.28_enableJei=true
     B:1.28_enableNonOreDict=true
