--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,9 +2,51 @@
 
 ~CONFIG_VERSION: 0.1.0
 
-world-1917283496 {
+world-1626790021 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-1917282659 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-1917282690 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=ICF
+    B:overlayEnabled=true
+}
+
+
+world-1917283372 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=cluster
+    B:overlayEnabled=true
+}
+
+
+world-1917283403 {
     # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
 
     # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
@@ -12,9 +54,39 @@ world-1917283496 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=circuit lv
 
     # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
+world-1917283434 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=inerti
+    B:overlayEnabled=true
+}
+
+
+world-1917283465 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=button
+    B:overlayEnabled=true
+}
+
+
+world-1917283496 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    S:defaultFluidContainerItem=
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
