--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -2009,6 +2009,7 @@ misc {
         advancedrocketry
         thaumcraft
         biomesoplenty
+        gregtech
      >
 
     # If enabled, NC's HWYLA integration will display additional information in the UI.
@@ -2940,13 +2941,6 @@ turbine {
 world_gen {
     # List of IDs of dimensions to whitelist/blacklist for ore generation.
     I:ore_dims <
-        0
-        2
-        -6
-        -100
-        4598
-        -9999
-        -11325
      >
 
     # Is the dimension list a whitelist (false) or a blacklist (true)?
@@ -2954,14 +2948,14 @@ world_gen {
 
     # Will these ores generate in the world? Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
     B:ore_gen <
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
      >
 
     # Mean numbers of ore blocks per ore chunk. Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
@@ -3024,7 +3018,7 @@ world_gen {
      >
 
     # Remove disabled ores from the Ore Dictionary and JEI?
-    B:ore_hide_disabled=false
+    B:ore_hide_disabled=true
 
     # Pickaxe harvest levels of ores. Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
     I:ore_harvest_levels <
@@ -3042,7 +3036,7 @@ world_gen {
     B:wasteland_biome=true
 
     # The weight assigned to the generation of the wasteland biomes - higher numbers correspond to higher generation rates.
-    I:wasteland_biome_weight=5
+    I:wasteland_biome_weight=50
 
     # Will the wasteland dimension be generated?
     B:wasteland_dimension_gen=true
